# socal-racer

./: .gitignore  README.md
docker/jetson/: Dockerfile  launch.sh  launch_device.sh
docker/ubuntu_x86/: Dockerfile  launch.sh  launch_device.sh
ros2_ws/src/pilot/: CMakeLists.txt  package.xml
ros2_ws/src/pilot/include/pilot/: pilot_node.hpp
ros2_ws/src/pilot/launch/: test.launch.py
ros2_ws/src/pilot/params/: pilot_config.yaml
ros2_ws/src/pilot/src/: pilot_node.cpp
ros2_ws/src/pilot_services/: CMakeLists.txt  package.xml
ros2_ws/src/pilot_services/srv/: SetEStop.srv
ros2_ws/src/waypoint_following/: CMakeLists.txt  package.xml
ros2_ws/src/waypoint_following/include/waypoint_following/: waypoint_follower.hpp
ros2_ws/src/waypoint_following/params/: wf.yaml
ros2_ws/src/waypoint_following/src/: waypoint_follower.cpp
